passing data to FE html

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -27,9 +27,7 @@
     </noscript>
     <div id="root"></div>
     <script type="text/javascript">
-      var context = {
-        message: '{{message}}'
-      };
+      var data = {{data}};
     </script>
     <!--
       This HTML file is a template.
