--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,11 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <script type="text/javascript">
+        var context = {
+          testdata: '{ { testdata } }'
+        };
+    </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
